--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@types/jest": "^29.0.0",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
