--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
     "@angular/material": "^14.1.1",
+    "@angular/material-moment-adapter": "^14.2.1",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
@@ -24,7 +25,7 @@
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
